@@ -189,6 +189,7 @@ sourcesub.test \
 specflags.test \
 specflags2.test	\
 specflags3.test	\
+specflags4.test \
 spell.test \
 spell2.test \
 spell3.test \
