@@ -1,0 +1,27 @@
+#! /bin/sh
+
+# Another per-object test.  From Pavel Roskin.
+
+. $srcdir/defs || exit 1
+
+cat > configure.in << 'END'
+AC_INIT
+AM_INIT_AUTOMAKE(test, 0.1)
+AC_PROG_CC
+AC_OUTPUT(Makefile)
+END
+
+cat > Makefile.am << 'END'
+AUTOMAKE_OPTIONS = foreign
+bin_PROGRAMS = test1
+test1_SOURCES = test1.c
+test1_CFLAGS = -DXM12
+END
+
+: > compile
+
+$AUTOMAKE || exit 1
+
+fgrep 'test1.o.o' && exit 1
+
+exit 0
