@@ -1,5 +1,8 @@
 1999-05-19  Tom Tromey  <tromey@cygnus.com>
 
+	* specflags4.test: New file.  From Pavel Roskin.
+	* Makefile.am (TESTS): Added specflags4.test.
+
 	* specflags.test: Added regression test for missing space.
 
 1999-05-13  Tom Tromey  <tromey@cygnus.com>
